<resources>
    <string name="app_name">GhostBusers</string>
    <string name="start_app">Start App</string>
    <string name="i_had_another_problem">I had Another Problem</string>
    <string name="i_am_stuck">I am Stuck</string>
    <string name="didn_t_arrive">Did not arrive</string>
    <string name="Early">Early </string>
    <string name="report_a_problem">Report A Problem</string>
    <string name="enter_problem_here">Enter problem here</string>
    <string name="submit">Submit</string>
    <string name="journey_details">Journey Details</string>
    <string name="running_late">Running Late</string>
    <string name="too_full">Too Full</string>
    <string name="trip_cancelled">Trip Cancelled</string>
    <string name="weather_issue">Weather Issue</string>
    <string name="other">Other</string>
</resources>
