<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".HadAProblemActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32sp"
        android:layout_marginEnd="32sp"
        android:layout_marginRight="32dp"
        android:text="@string/report_a_problem"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:fadingEdge="horizontal|vertical"
        android:hint="@string/enter_problem_here"
        android:inputType="textMultiLine"
        android:shadowColor="#00000000"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_issue" />

    <Button
        android:id="@+id/submit_a_report"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:onClick="onSubmitButton"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageButton
        android:id="@+id/running_early"
        android:onClick="onSubmitButton"
        app:layout_constraintEnd_toStartOf="@+id/running_late"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@android:drawable/ic_dialog_alert"
        style="@style/icon_button_left"
        android:contentDescription="@string/Early"/>

    <ImageButton
        android:id="@+id/running_late"
        android:contentDescription="@string/running_late"
        android:onClick="onSubmitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@android:drawable/ic_dialog_alert"
        style="@style/icon_button_right" />

    <ImageButton
        android:id="@+id/did_not_arrive"
        android:contentDescription="@string/didn_t_arrive"
        android:onClick="onSubmitButton"
        app:layout_constraintEnd_toStartOf="@+id/i_am_stuck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/running_early"
        app:srcCompat="@android:drawable/ic_dialog_alert"
        style="@style/icon_button_left"/>

    <ImageButton
        android:id="@+id/i_am_stuck"
        android:contentDescription="@string/i_am_stuck"
        android:onClick="onSubmitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/running_late"
        app:srcCompat="@android:drawable/ic_dialog_alert"
        style="@style/icon_button_right"/>

    <ImageButton
        android:id="@+id/too_full"
        android:onClick="onSubmitButton"
        app:layout_constraintEnd_toStartOf="@+id/trip_cancelled"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/did_not_arrive"
        app:srcCompat="@android:drawable/ic_dialog_alert"
        android:contentDescription="@string/too_full"
        style="@style/icon_button_left"
        />

    <ImageButton
        android:id="@+id/trip_cancelled"
        android:onClick="onSubmitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/i_am_stuck"
        app:srcCompat="@android:drawable/ic_dialog_alert"
        android:contentDescription="@string/trip_cancelled"
        style="@style/icon_button_right"/>

    <ImageButton
        android:id="@+id/weather_issue"
        android:onClick="onSubmitButton"
        app:layout_constraintEnd_toStartOf="@+id/other"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/too_full"
        app:srcCompat="@android:drawable/ic_dialog_alert"
        android:contentDescription="@string/weather_issue"
        style="@style/icon_button_left"/>

    <ImageButton
        android:id="@+id/other"
        android:onClick="onSubmitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trip_cancelled"
        app:srcCompat="@android:drawable/ic_dialog_alert"
        android:contentDescription="@string/i_had_another_problem"
        style="@style/icon_button_right"/>

</androidx.constraintlayout.widget.ConstraintLayout>